# BetterSelfContained

./: CMakeLists.txt  LICENSE  main.cpp
src/: coreclrhost.h
src/Config/: SelfContainedConfig.cpp  SelfContainedConfig.hpp
src/Impl/: ImplLinux.hpp  ImplOsx.hpp  ImplWindows.hpp
src/Mains/: MainLinux.cpp  MainWindows.cpp
src/Util/: Utilities.cpp  Utilities.hpp
